; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/can/extr_dev.c_can_validate_bitrate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/can/extr_dev.c_can_validate_bitrate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.can_bittiming = type { i64 }
%struct.can_priv = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.can_bittiming*, i64*, i32)* @can_validate_bitrate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @can_validate_bitrate(%struct.net_device* %0, %struct.can_bittiming* %1, i64* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.net_device*, align 8
  %7 = alloca %struct.can_bittiming*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.can_priv*, align 8
  %11 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %6, align 8
  store %struct.can_bittiming* %1, %struct.can_bittiming** %7, align 8
  store i64* %2, i64** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load %struct.net_device*, %struct.net_device** %6, align 8
  %13 = call %struct.can_priv* @netdev_priv(%struct.net_device* %12)
  store %struct.can_priv* %13, %struct.can_priv** %10, align 8
  store i32 0, i32* %11, align 4
  br label %14

14:                                               ; preds = %30, %4
  %15 = load i32, i32* %11, align 4
  %16 = load i32, i32* %9, align 4
  %17 = icmp ult i32 %15, %16
  br i1 %17, label %18, label %33

18:                                               ; preds = %14
  %19 = load %struct.can_bittiming*, %struct.can_bittiming** %7, align 8
  %20 = getelementptr inbounds %struct.can_bittiming, %struct.can_bittiming* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64*, i64** %8, align 8
  %23 = load i32, i32* %11, align 4
  %24 = zext i32 %23 to i64
  %25 = getelementptr inbounds i64, i64* %22, i64 %24
  %26 = load i64, i64* %25, align 8
  %27 = icmp eq i64 %21, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %18
  br label %33

29:                                               ; preds = %18
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %11, align 4
  %32 = add i32 %31, 1
  store i32 %32, i32* %11, align 4
  br label %14

33:                                               ; preds = %28, %14
  %34 = load i32, i32* %11, align 4
  %35 = load %struct.can_priv*, %struct.can_priv** %10, align 8
  %36 = getelementptr inbounds %struct.can_priv, %struct.can_priv* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = icmp uge i32 %34, %37
  br i1 %38, label %39, label %42

39:                                               ; preds = %33
  %40 = load i32, i32* @EINVAL, align 4
  %41 = sub nsw i32 0, %40
  store i32 %41, i32* %5, align 4
  br label %43

42:                                               ; preds = %33
  store i32 0, i32* %5, align 4
  br label %43

43:                                               ; preds = %42, %39
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}

declare dso_local %struct.can_priv* @netdev_priv(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
